<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- Server Configuration -->
    <string name="v">1</string>
    <string name="baseUrl">http://azure33.chinacloudapp.cn/onionc/api.php</string>
	<string name="app_secret">sodFcb8tekloOCYX</string>
	<string name="app_id">1</string>
    
    
    <!-- over all -->
    <string name="app_name">Civitas</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
	<string name="WTF">我也不知道</string>
	<string name="my_citie">我的2界面磁贴</string>
	<string name="my_second">lalalalalal</string>
	<string name="messages">personal_messages</string>
	<string name="conversation">conversation_of_messages</string>
	<string name="SQL">SQL类</string>
	
	<!-- personal attribute -->
	<string name="health">健康</string>
	<string name="hunger">饥饿</string>
	<string name="happy">快乐</string>
	<string name="energy">精力</string>
	<string name="sample_attribute">99.9</string>
	
	
	<!-- login view -->
	<string name="login_account_hint">你的civitas帐号</string>
	<string name="login_password_hint">您的密码</string>
	<string name="button_text">登陆></string>
	<string name="login_title">CIVITAS</string>
	<string name="login_subtitle">短暂的超游之后是长久的沉浸</string>
	<string name="sample_level">6级</string>
	<string name="sample_exp">128/200</string>
	
	<!-- msg view -->
	<string name="user_name">天地一蜉蝣</string>
    <string name="user_msg">不识晦朔，无意春秋。取足一日，尚又何求？戏渟淹而委余，何必江湖而是游。</string>
    <string name="msg_time">4月3日</string>
</resources>
