<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="@dimen/loginIconLength"
        android:layout_height="@dimen/loginIconLength"
        android:contentDescription="@string/WTF"
        android:scaleType="fitCenter"
        android:src="@drawable/user_icon" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

		<EditText
		    android:id="@+id/user_name"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/login_account_hint" />

	</TableRow>

	<TableRow
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <EditText
	        android:id="@+id/user_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/login_password_hint"
	        android:inputType="textPassword" />

	</TableRow>

	<Button
	    android:id="@+id/login_button"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/login_button_shape"
	    android:contentDescription="@string/WTF"
	    android:text="@string/button_text" />

</LinearLayout>
