<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:id="@+id/status_bar"
    android:paddingLeft="@dimen/normalPaddingLeft"
    android:stretchColumns="1" >

        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/normalTextSize" 
                android:text="@string/energy"/>
			<!-- 用来显示精力长度 -->
            <ProgressBar
                android:id="@+id/energy_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:indeterminate="true"/>
            <!-- 精力值 -->

            <TextView
                android:id="@+id/energy_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_attribute" />

        </TableRow>
       	<TableRow 
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textSize="@dimen/normalTextSize" 
             android:text="@string/happy"/>
		<!-- 用来显示长度 -->
       <ProgressBar
           android:id="@+id/happy_bar"
           style="?android:attr/progressBarStyleHorizontal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" 
           android:indeterminate="true"/>
       <!-- 快乐值 -->

       <TextView
           android:id="@+id/happy_points"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/sample_attribute" />

	   </TableRow>
       <TableRow 
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:textSize="@dimen/normalTextSize" 
               android:text="@string/happy"/>
		<!-- 用来显示健康长度 -->
           <ProgressBar
               android:id="@+id/health_bar"
               style="?android:attr/progressBarStyleHorizontal"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" 
               android:indeterminate="true"/>
           <!-- 健康值 -->

           <TextView
               android:id="@+id/health_points"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/sample_attribute" />

       </TableRow>
       <TableRow 
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:textSize="@dimen/normalTextSize" 
               android:text="@string/hunger"/>
		  <!-- 用来显示饥饿长度 -->
          <ProgressBar
               android:id="@+id/hunger_bar"
               style="?android:attr/progressBarStyleHorizontal"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" 
               android:indeterminate="true"/>
           <!-- 饥饿值 -->

           <TextView
               android:id="@+id/hunger_points"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/sample_attribute" />

        </TableRow>

</TableLayout>
